--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*
+{
+    color: #fff;
+}
 body
 {
     margin: 0;
@@ -14,7 +18,6 @@ nav
 }
 nav li
 {
-    margin-top: 10px;
     display: inline-block;
     font-size: 1.25em;
 }
@@ -23,15 +26,47 @@ nav li a
     text-decoration: none;
     /* border: 1px solid black; */
     padding: 10px;
-    color: white;
 }
-#hero-images img
+#hero-images
 {
+    background-image: url('../images/hero-min.jpg');
     width: 100%;
-    display: block;
+    height: 85vh;
+    background-position: center;
+    background-size: cover;
+    
 }
 .copy
 {
     text-align: center;
     color: white;
+}
+.navbar
+{
+    padding: 20px 90px 0 90px;
+    height: 80px;
+}
+.p-2
+{
+    padding: 20px;
+}
+.pb-6
+{
+    padding-bottom: 60px;
+}
+.container
+{
+    padding: 40px 90px 20px 90px;
+}
+.row
+{
+    display: flex;
+}
+.col
+{
+    flex: 50%;
+}
+.w-100
+{
+    width: 100%;
 }
